--- a/styles.css
+++ b/styles.css
@@ -319,7 +319,8 @@ em {
     flex-direction: column;
     align-items: center;
     border: 0.5px solid var(--danger-transparent-color);
-    border-radius: var(--border-large);
+    border-bottom-left-radius: var(--border-large);
+    border-bottom-right-radius: var(--border-large);
     background-color: var(--danger-transparent-color)
 }
 
